# SmartCommit-CLI

./: .gitignore  LICENSE  README.md  design.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
src/: __init__.py  cli.py  commit_generator.py  commit_linter.py  config_manager.py  git_analyzer.py  llm_client.py  utils.py
